# Raytracer

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  EBNF.md  HelloWorld.cpp  LICENSE.md  Makefile  README.md
.github/workflows/: cmake_multiplatform_ci.yml  cmake_multiplatform_linter.yml
include/: cameras.hpp  colors.h  colors.hpp  demo.hpp  geometry.hpp  materials.hpp  profiling.hpp  random.hpp  renderers.hpp  scenefiles.hpp  shapes.hpp
samples/: csg_example.txt  demo_onoff_tracing.txt  demo_path_tracing.txt  demo_path_tracing_source.txt  demo_scene.txt  flat_planets.txt  provisional_README.md
scripts/: demo_animation.sh  generate_image.sh
src/: HelloWorld.cpp  raytracer.cpp
test/: cameras_Gtest.cpp  cameras_test.cpp  colors.cpp  colors_Gtest.cpp  colors_test.cpp  geometry_Gtest.cpp  geometry_test.cpp  materials_Gtest.cpp  materials_test.cpp  random_Gtest.cpp  random_test.cpp  reference_be.pfm:Zone.Identifier  reference_le.pfm:Zone.Identifier  renderers_Gtest.cpp  renderers_test.cpp  scenefiles_Gtest.cpp  scenefiles_test.cpp  shapes_Gtest.cpp  shapes_test.cpp
